@startuml

title __ZEEBE-USER-TASK-BOOT's Class Diagram__\n

  namespace it.almaviva.eai.zeebe.usertask {
    class it.almaviva.eai.zeebe.usertask.GrpcServerLifecycle {
    }
  }
  

  namespace it.almaviva.eai.zeebe.usertask {
    class it.almaviva.eai.zeebe.usertask.UserTaskApplication {
    }
  }
  

  namespace it.almaviva.eai.zeebe.usertask {
    namespace controller {
      class it.almaviva.eai.zeebe.usertask.controller.AdminController {
      }
    }
  }
  

  namespace it.almaviva.eai.zeebe.usertask {
    namespace controller {
      class it.almaviva.eai.zeebe.usertask.controller.UserController {
      }
    }
  }
  

  namespace it.almaviva.eai.zeebe.usertask {
    namespace grpc {
      class it.almaviva.eai.zeebe.usertask.grpc.TaskNotificationServiceImpl {
      }
    }
  }
  

  namespace it.almaviva.eai.zeebe.usertask {
    namespace handler {
      class it.almaviva.eai.zeebe.usertask.handler.UserTaskJobHandler {
      }
    }
  }
  

  namespace it.almaviva.eai.zeebe.usertask {
    namespace security {
      class it.almaviva.eai.zeebe.usertask.security.WebSecurityConfig {
      }
    }
  }
  

  namespace it.almaviva.eai.zeebe.usertask {
    namespace service {
      class it.almaviva.eai.zeebe.usertask.service.TaskService {
      }
    }
  }
  

  namespace it.almaviva.eai.zeebe.usertask {
    namespace swagger {
      class it.almaviva.eai.zeebe.usertask.swagger.SwaggerConfig {
      }
    }
  }
  

  namespace it.almaviva.eai.zeebe.usertask {
    namespace websocket {
      class it.almaviva.eai.zeebe.usertask.websocket.WebSocketConfig {
      }
    }
  }
  

  it.almaviva.eai.zeebe.usertask.GrpcServerLifecycle .up.|> org.springframework.context.SmartLifecycle
  it.almaviva.eai.zeebe.usertask.GrpcServerLifecycle o-- it.almaviva.eai.zeebe.usertask.grpc.TaskNotificationServiceImpl : taskService
  it.almaviva.eai.zeebe.usertask.controller.AdminController o-- it.almaviva.eai.zeebe.usertask.port.incoming.ITaskUseCase : iTaskUseCase
  it.almaviva.eai.zeebe.usertask.controller.UserController o-- it.almaviva.eai.zeebe.usertask.port.incoming.ITaskUseCase : iTaskUseCase
  it.almaviva.eai.zeebe.usertask.grpc.TaskNotificationServiceImpl .up.|> java.util.concurrent.Flow.Subscriber
  it.almaviva.eai.zeebe.usertask.grpc.TaskNotificationServiceImpl -up-|> it.almaviva.eai.zeebe.usertask.grpc.lib.TaskNotificationServiceGrpc.TaskNotificationServiceImplBase
  it.almaviva.eai.zeebe.usertask.handler.UserTaskJobHandler .up.|> io.zeebe.client.api.worker.JobHandler
  it.almaviva.eai.zeebe.usertask.handler.UserTaskJobHandler .up.|> java.util.concurrent.Flow.Publisher
  it.almaviva.eai.zeebe.usertask.handler.UserTaskJobHandler o-- it.almaviva.eai.zeebe.usertask.GrpcServerLifecycle : grpcServerLifecycle
  it.almaviva.eai.zeebe.usertask.handler.UserTaskJobHandler o-- it.almaviva.eai.zeebe.usertask.port.incoming.ITaskUseCase : iTaskUseCase
  it.almaviva.eai.zeebe.usertask.security.WebSecurityConfig -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  it.almaviva.eai.zeebe.usertask.service.TaskService .up.|> it.almaviva.eai.zeebe.usertask.port.incoming.ITaskUseCase
  it.almaviva.eai.zeebe.usertask.service.TaskService o-- it.almaviva.eai.zeebe.usertask.port.outgoing.ITaskPort : iTaskPort
  it.almaviva.eai.zeebe.usertask.websocket.WebSocketConfig .up.|> org.springframework.web.socket.config.annotation.WebSocketMessageBrokerConfigurer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
